libs/parser/testdata/errors/at_extra_colon.csl
# Test rejection of extra ':' in reference paths
host: @configs:prod:database.name
